--- a/index.html
+++ b/index.html
@@ -5,5 +5,19 @@
 </head>
 <body>
 <h1>Coming Soon......</h1>
+<a href='#olla' style="text-decoration:none; border: 2px dotted; "><p>next</p></a>
+<style>
+    body {
+        background: linear-gradient(to right, red, blue);
+        position: flex;
+        flex: center;
+        justify-content: center;
+    }
+h1 {
+    height: 100vh;
+	text-align: center;
+    color: aqua;
+	}
+</style>
 </body>
 </html>
