--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
 <body>
 <div class="tilt tilt-logo" data-tilt data-tilt-glare="true" data-tilt-scale="1.1">
 	<span class="tilt-logo-inner">
-		<h1>Coming Soon...</h1>
+		<h1>Happy Birthday Pk may all your wishes come true</h1>
 	</span>
 </div>
 <style>
     body {
-        background: linear-gradient(to right, red, blue);
+        background: url(pk.jpg); repeat:none;
         position: flex;
         flex: center;
         justify-content: center;
+        background-repeat: none;
     }
     html {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
@@ -30,7 +31,7 @@
 	width: 500px;
 	height: 500px;
 	background-color: #7e56ff;
-	background-image: linear-gradient(150deg, #5a00ff 0%, #ff1ff7 100%, #ff1ff7 100%);
+	background-image: url(pk1.jpg);
 }
 
 .tilt-logo-inner {
@@ -40,14 +41,14 @@
 	left: 50%;
 	color: white;
 	font-size: 1.9rem;
+	font-family: sans-serif;
 }
 
 
-/*h1 {
-    height: 100vh;
+h1 {
 	text-align: center;
     color: aqua;
-	}*/
+	}
 </style>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" ></script>
 
