--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </div>
 <style>
     body {
-        background: url(pk.jpg); repeat:none;
+        background: url(pk.jpg);
         position: flex;
         flex: center;
         justify-content: center;
-        background-repeat: none;
+        
     }
     html {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
