--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My APIs</title>
+	<title>PK Dost</title>
 </head>
 <body>
 <div class="tilt tilt-logo" data-tilt data-tilt-glare="true" data-tilt-scale="1.1">
