--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
 </div>
 <style>
     body {
-        background: url(pk.jpg); repeat:none;
-        position: flex;
-        flex: center;
-        justify-content: center;
+        background: url(pk.jpg);
         background-repeat: none;
     }
     html {
