--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <style>
     body {
         background: url(pk.jpg);
-        background-repeat: no-repeat;
+        background-repeat:inherit;
     }
     html {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
