--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </div>
 <style>
     body {
-        background: url(pk.jpg);
+         background: linear-gradient(to right, #dd5e89, #f7bb97); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
         background-repeat:inherit;
     }
     html {
