--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>PK Dost</title>
+	<title>My APIs</title>
 </head>
 <body>
 <div class="tilt tilt-logo" data-tilt data-tilt-glare="true" data-tilt-scale="1.1">
@@ -11,8 +11,11 @@
 </div>
 <style>
     body {
-         background: linear-gradient(to right, #dd5e89, #f7bb97); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-        background-repeat:inherit;
+        background: url(bd.gif);
+        position: flex;
+        flex: center;
+        justify-content: center;
+        background-repeat: none;
     }
     html {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
