--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 h1 {
 	text-align: center;
     color: aqua;
+font-family: sans-serif;
+
 	}
 </style>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" ></script>
