--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My APIs</title>
+	<title>Pk's Birthday</title>
 </head>
 <body>
+		<audio id="audio" src="Demo.mp3"></audio>
+<button><a onClick="document.getElementById('audio').play()">Click me! Birthday Boy.</a></button>
 <div class="tilt tilt-logo" data-tilt data-tilt-glare="true" data-tilt-scale="1.1">
 	<span class="tilt-logo-inner">
 		<h1>Happy Birthday Pk may all your wishes come true</h1>
 	</span>
+
 </div>
 <style>
     body {
@@ -48,9 +51,24 @@
 h1 {
 	text-align: center;
     color: aqua;
-font-family: sans-serif;
-
 	}
+
+button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  background-color: pink;
+  /*position: flex;
+  flex:center;
+  justify-content:center;*/
+}
 </style>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" ></script>
 
