--- a/index.html
+++ b/index.html
@@ -1,78 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Pk's Birthday</title>
+	<title>My APIs</title>
 </head>
 <body>
-		<audio id="audio" src="Demo.mp3"></audio>
-<button><a onClick="document.getElementById('audio').play()">Click me! Birthday Boy.</a></button>
-<div class="tilt tilt-logo" data-tilt data-tilt-glare="true" data-tilt-scale="1.1">
-	<span class="tilt-logo-inner">
-		<h1>Happy Birthday Pk may all your wishes come true</h1>
-	</span>
-
-</div>
+		<h1>Coming Soon...<\h1> 
 <style>
     body {
-        background: url(bd.gif);
+        background:#ff0f00;
         position: flex;
         flex: center;
         justify-content: center;
         background-repeat: none;
     }
-    html {
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-	box-sizing: inherit;
-}
-.tilt {
-	box-shadow: 0 20px 27px rgba(0, 0, 0, 0.05);
-	transform-style: preserve-3d;
-	margin: 50px auto;
-}
-
-.tilt-logo {
-	width: 500px;
-	height: 500px;
-	background-color: #7e56ff;
-	background-image: url(pk1.jpg);
-}
-
-.tilt-logo-inner {
-	transform: translateZ(50px) translateY(-50%) translateX(-50%);
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	color: white;
-	font-size: 1.9rem;
-	font-family: sans-serif;
-}
 
 
-h1 {
-	text-align: center;
-    color: aqua;
-	}
-
-button {
-  background-color: #4CAF50; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  background-color: pink;
-  /*position: flex;
-  flex:center;
-  justify-content:center;*/
-}
 </style>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" ></script>
-
-<!-- https://github.com/gijsroge/tilt.js -->
-<script src="https://unpkg.com/tilt.js@1.1.21/dest/tilt.jquery.min.js"></script>
 </body>
 </html>
