--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>My APIs</title>
 </head>
 <body>
-		<h1>Coming Soon...<\h1> 
+		<h1>Coming Soon...</h1> 
 <style>
     body {
         background:#ff0f00;
